とりあえず

--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
     <div id="app" class="container">
         <h2 class="mb-4">おじさん構文</h2>
 
-        <p>入力されたテキストをおじさん構文にします</p>
+        <p>入力されたテキストをおじさん構文にします。</p>
 
         <div class="mb-3">
             <label for="inputText" class="form-label">テキストを入力してください:</label>
